--- a/tests/WingetGUI.Tests.MSTest/WingetGUI.Tests.MSTest.csproj
+++ b/tests/WingetGUI.Tests.MSTest/WingetGUI.Tests.MSTest.csproj
@@ -10,12 +10,23 @@
 	<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
     <ProjectPriFileName>resources.pri</ProjectPriFileName>
   </PropertyGroup>
+	
+  <PropertyGroup>
+	<!--  
+        Ensure that test logger is copied to output directory, see 
+        https://github.com/Tyrrrz/GitHubActionsTestLogger/issues/5 
+    -->
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
+	<PackageReference Include="GitHubActionsTestLogger" Version="1.1.2" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\WingetGUI\WingetGUI.csproj" />
   </ItemGroup>
