--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,10 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 6.0.x
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.1
+      - name: Build winget-cli
+        run: msbuild.exe winget-cli\src\AppInstallerCLI.sln /p:Configuration=Release
       - name: Build project
         run: dotnet build --configuration Release
       - name: Run tests
