--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v3
         with:
+          submodules: true
           fetch-depth: 0
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
