--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,17 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 7.0.x
+      - uses: nuget/setup-nuget@v1
+        with:
+          nuget-version: '6.x'
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.1
-#      - name: Build winget-cli
-#        run: msbuild.exe winget-cli\src\AppInstallerCLI.sln /p:Configuration=Release
+      - name: Nuget restore winget-cli
+        run: nuget restore
+        working-directory: winget-cli/src
+      - name: Build winget-cli
+        run: msbuild.exe /p:Configuration=Release
+        working-directory: winget-cli/src
       - name: .NET Restore
         run: dotnet restore
       # dotnet build not supported see https://github.com/microsoft/microsoft-ui-xaml/issues/5327
