--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v3
         with:
-          submodules: true
-          fetch-depth: 0
+          submodules: recursive
+          fetch-depth: 1
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
