Trying setting persist-credentials

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 1
+          persist-credentials: true
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
